@@ -37,7 +37,6 @@ SUCH DAMAGE.
 
 import sys
 if sys.version_info[0] == 2 :
-  import setup2
+    import setup2
 else :  # >= Python 3.0
-  import setup3
-
+    import setup3
